--- a/src/pages/posts/let-the-browser-do-it-for-you/index.mdx
+++ b/src/pages/posts/let-the-browser-do-it-for-you/index.mdx
@@ -2,7 +2,7 @@ export const metadata = {
   date: "2022-02-18T19:26:54.937Z",
   title: "Let the Browser Do It for You",
   description:
-    "A reminder to myself that I don't always need to re-invent the wheel.",
+    "A reminder to myself that I don't always need to reinvent the wheel.",
   image: require("./browser.png"),
   imageAlt: "A little browser lifting weights",
 };
@@ -14,7 +14,7 @@ Using built-in browser features is not a novel idea. Choosing `border-radius` ov
 
 I've realised that once I have found a way of doing something, I tend to stick with it and accept it as the status quo. I often find myself reusing techniques from my old bag of tricks without checking to see if anything changed in the browser landscape.
 
-This post is mostly a reminder to myself that I don't always need to re-invent the wheel and that I can, in most cases, rely on the browser to do the heavy lifting for me.
+This post is mostly a reminder to myself that I don't always need to reinvent the wheel and that I can, in most cases, rely on the browser to do the heavy lifting for me.
 
 ---
 
